--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Required meta tags always come first -->
+    <title>Dinos 4 Sale</title>
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Bootstrap CSS -->
     <link
       rel="stylesheet"
       href="node_modules/bootstrap/dist/css/bootstrap.min.css"
     />
 
     <link rel="stylesheet" href="css/styles.css" />
-
-    <title>Dinos 4 Sale</title>
+    <script
+      src="https://kit.fontawesome.com/573dd0cca5.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body data-spy="scroll" data-target=".navbar">
@@ -46,6 +48,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#faqs">FAQs</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#about">About</a>
           </li>
         </ul>
         <span class="ml-md-auto">
@@ -120,6 +125,7 @@
       </a>
     </div>
 
+    <!-- Features -->
     <div class="container-fluid content" id="features">
       <div class="row">
         <div
@@ -212,7 +218,7 @@
         <div class="card-header" id="headingOne">
           <h5 class="mb-0">
             <button
-              class="btn btn-link"
+              class="btn"
               type="button"
               data-toggle="collapse"
               data-target="#collapseOne"
@@ -248,7 +254,7 @@
         <div class="card-header" id="headingTwo">
           <h5 class="mb-0">
             <button
-              class="btn btn-link collapsed"
+              class="btn collapsed"
               type="button"
               data-toggle="collapse"
               data-target="#collapseTwo"
@@ -283,7 +289,7 @@
         <div class="card-header" id="headingThree">
           <h5 class="mb-0">
             <button
-              class="btn btn-link collapsed"
+              class="btn collapsed"
               type="button"
               data-toggle="collapse"
               data-target="#collapseThree"
@@ -316,16 +322,48 @@
       </div>
     </div>
 
+    <!-- About -->
+    <div id="about">
+      <h2>About</h2>
+      <p>
+        Prow scuttle parrel provost Sail ho shrouds spirits boom mizzenmast
+        yardarm. Pinnace holystone mizzenmast quarter crow's nest nipperkin grog
+        yardarm hempen halter furl. Swab barque interloper chantey doubloon
+        starboard grog black jack gangway rutters.
+      </p>
+      <p>
+        Deadlights jack lad schooner scallywag dance the hempen jig carouser
+        broadside cable strike colors. Bring a spring upon her cable holystone
+        blow the man down spanker Shiver me timbers to go on account lookout
+        wherry doubloon chase. Belay yo-ho-ho keelhaul squiffy black spot
+        yardarm spyglass sheet transom heave to.
+      </p>
+      <p>
+        Trysail Sail ho Corsair red ensign hulk smartly boom jib rum gangway.
+        Case shot Shiver me timbers gangplank crack Jennys tea cup ballast
+        Blimey lee snow crow's nest rutters. Fluke jib scourge of the seven seas
+        boatswain schooner gaff booty Jack Tar transom spirits.
+      </p>
+    </div>
+
     <!-- Footer -->
     <footer class="page-footer font-small blue">
-      <!-- Copyright -->
-      <div class="footer-copyright text-center py-3">
-        © 2020 Copyright:
-        <a href="https://dinos4sale.com"> Dinos4Sale.com</a>
+      <div>
+        <a href="https://facebook.com"
+          ><i class="fab fa-facebook-square"></i
+        ></a>
+        <a href="https://instagram.com"
+          ><i class="fab fa-instagram-square"></i
+        ></a>
+        <a href="https://twitter.com"><i class="fab fa-twitter-square"></i></a>
       </div>
-      <!-- Copyright -->
+      <div class="footer-copyright">
+        © 2020 Copyright:
+        <a href="https://github.com/johndunstan/dinos-for-sale">
+          Dinos4Sale.com</a
+        >
+      </div>
     </footer>
-    <!-- Footer -->
 
     <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
