Issue #1 - Add scss

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <div
           class="left-content col-md-12 col-lg-4 align-self-center text-center"
         >
-          <h2>Beloved</h2>
+          <h2>Playful</h2>
           <p>Selfies thundercats coloring book kale chips cray hot chicken</p>
         </div>
         <div
@@ -143,7 +143,7 @@
         <div
           class="right-content col-md-12 col-lg-4 align-self-center text-center"
         >
-          <h2>Playful</h2>
+          <h2>Beloved</h2>
           <p>Selfies thundercats coloring book kale chips cray hot chicken</p>
         </div>
       </div>
@@ -349,13 +349,15 @@
     <!-- Footer -->
     <footer class="page-footer font-small blue">
       <div>
-        <a href="https://facebook.com"
+        <a href="https://facebook.com" target="_blank"
           ><i class="fab fa-facebook-square"></i
         ></a>
-        <a href="https://instagram.com"
+        <a href="https://instagram.com" target="_blank"
           ><i class="fab fa-instagram-square"></i
         ></a>
-        <a href="https://twitter.com"><i class="fab fa-twitter-square"></i></a>
+        <a href="https://twitter.com" target="_blank"
+          ><i class="fab fa-twitter-square"></i
+        ></a>
       </div>
       <div class="footer-copyright">
         © 2020 Copyright:
