Further color adjustments. Improve breakpoint responsiveness for product cards.

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <!-- Jumbotron -->
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
-        <h1 class="display-4">Get Your Awesome Dinos Here!</h1>
+        <h1 class="display-4">Get Your Awesome <span>Dinos Here!</span></h1>
         <p class="lead">You can count on us to meet all your dino needs.</p>
       </div>
     </div>
@@ -137,13 +137,13 @@
         <div
           class="center-content col-md-12 col-lg-4 align-self-center text-center"
         >
-          <h2>Loyal</h2>
+          <h2>Beloved</h2>
           <p>Selfies thundercats coloring book kale chips cray hot chicken</p>
         </div>
         <div
           class="right-content col-md-12 col-lg-4 align-self-center text-center"
         >
-          <h2>Beloved</h2>
+          <h2>Loyal</h2>
           <p>Selfies thundercats coloring book kale chips cray hot chicken</p>
         </div>
       </div>
@@ -160,7 +160,11 @@
         <div class="card-body">
           <h4 class="card-title">Ankylosaurus</h4>
           <h5 class="card-subtitle mb-2 text-muted">Ready to Play</h5>
-          <p class="card-text">Lorem ipsum la la alal alalallal alalla</p>
+          <p class="card-text">
+            This little guy is a bundle of fun. Whether he's biting your ankles
+            or those of your pesky neighbor, you'll be sure to experience value
+            on entertainment alone.
+          </p>
         </div>
       </div>
       <div class="card product-card">
@@ -172,7 +176,11 @@
         <div class="card-body">
           <h4 class="card-title">Brachiosaurus</h4>
           <h5 class="card-subtitle mb-2 text-muted">A Whole Lotta Love</h5>
-          <p class="card-text">Lorem ipsum la la alal alalallal alalla</p>
+          <p class="card-text">
+            Some dinos just need someone to love them. Whether you're looking
+            for a dino to curl up on your lap (or who's lap you can curl up
+            into), this is your dino!
+          </p>
         </div>
       </div>
       <div class="card product-card">
@@ -184,7 +192,11 @@
         <div class="card-body">
           <h4 class="card-title">Triceratops</h4>
           <h5 class="card-subtitle mb-2 text-muted">Tried and True</h5>
-          <p class="card-text">Lorem ipsum la la alal alalallal alalla</p>
+          <p class="card-text">
+            This dino is sure to always be at your side. If you're looking for
+            that dino to accompany you enjoy from the office to your friend's
+            backyard barbeque, this is the one.
+          </p>
         </div>
       </div>
     </div>
@@ -207,7 +219,7 @@
           >
         </div>
 
-        <button type="submit" class="btn btn-primary">Change my life</button>
+        <button type="submit" class="btn btn-submit">Change my life</button>
       </form>
     </div>
 
