Fix navbar links putting section under navbar.

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     ></script>
   </head>
 
+  <!-- Navbar -->
   <body data-spy="scroll" data-target=".navbar">
-    <!-- Navbar -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">Dinos 4 Sale</a>
       <button
@@ -41,7 +41,7 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#features">Products</a>
+            <a class="nav-link" href="#products">Products</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#contact">Contact</a>
@@ -150,59 +150,61 @@
     </div>
 
     <!-- Products -->
-    <div class="card-deck-custom">
-      <div class="card product-card">
-        <img
-          class="card-img-top"
-          src="images/products/ankylosaurus.jpg"
-          alt="Card image cap"
-        />
-        <div class="card-body">
-          <h4 class="card-title">Ankylosaurus</h4>
-          <h5 class="card-subtitle mb-2 text-muted">Ready to Play</h5>
-          <p class="card-text">
-            This little guy is a bundle of fun. Whether he's biting your ankles
-            or those of your pesky neighbor, you'll be sure to experience value
-            on entertainment alone.
-          </p>
+    <div id="products">
+      <div class="card-deck-custom">
+        <div class="card product-card">
+          <img
+            class="card-img-top"
+            src="images/products/ankylosaurus.jpg"
+            alt="Card image cap"
+          />
+          <div class="card-body">
+            <h4 class="card-title">Ankylosaurus</h4>
+            <h5 class="card-subtitle mb-2 text-muted">Ready to Play</h5>
+            <p class="card-text">
+              This little guy is a bundle of fun. Whether he's biting your
+              ankles or those of your pesky neighbor, you'll be sure to
+              experience value on entertainment alone.
+            </p>
+          </div>
         </div>
-      </div>
-      <div class="card product-card">
-        <img
-          class="card-img-top"
-          src="images/products/Brachiosaurus.jpg"
-          alt="Card image cap"
-        />
-        <div class="card-body">
-          <h4 class="card-title">Brachiosaurus</h4>
-          <h5 class="card-subtitle mb-2 text-muted">A Whole Lotta Love</h5>
-          <p class="card-text">
-            Some dinos just need someone to love them. Whether you're looking
-            for a dino to curl up on your lap (or who's lap you can curl up
-            into), this is your dino!
-          </p>
+        <div class="card product-card">
+          <img
+            class="card-img-top"
+            src="images/products/Brachiosaurus.jpg"
+            alt="Card image cap"
+          />
+          <div class="card-body">
+            <h4 class="card-title">Brachiosaurus</h4>
+            <h5 class="card-subtitle mb-2 text-muted">A Whole Lotta Love</h5>
+            <p class="card-text">
+              Some dinos just need someone to love them. Whether you're looking
+              for a dino to curl up on your lap (or who's lap you can curl up
+              into), this is your dino!
+            </p>
+          </div>
         </div>
-      </div>
-      <div class="card product-card">
-        <img
-          class="card-img-top"
-          src="images/products/triceratops.jpg"
-          alt="Card image cap"
-        />
-        <div class="card-body">
-          <h4 class="card-title">Triceratops</h4>
-          <h5 class="card-subtitle mb-2 text-muted">Tried and True</h5>
-          <p class="card-text">
-            This dino is sure to always be at your side. If you're looking for
-            that dino to accompany you enjoy from the office to your friend's
-            backyard barbeque, this is the one.
-          </p>
+        <div class="card product-card">
+          <img
+            class="card-img-top"
+            src="images/products/triceratops.jpg"
+            alt="Card image cap"
+          />
+          <div class="card-body">
+            <h4 class="card-title">Triceratops</h4>
+            <h5 class="card-subtitle mb-2 text-muted">Tried and True</h5>
+            <p class="card-text">
+              This dino is sure to always be at your side. If you're looking for
+              that dino to accompany you anywhere from the office to your
+              friend's backyard barbeque, look no further.
+            </p>
+          </div>
         </div>
       </div>
     </div>
 
     <!-- Contact -->
-    <div id="contact">
+    <section id="contact">
       <form>
         <h3>Start your dino journey.</h3>
         <div class="form-group">
@@ -221,7 +223,7 @@
 
         <button type="submit" class="btn btn-submit">Change my life</button>
       </form>
-    </div>
+    </section>
 
     <!-- Accordian -->
     <div class="accordion container-fluid" id="faqs">
