Update lorem ipsum text with real fake text.

--- a/index.html
+++ b/index.html
@@ -132,19 +132,25 @@
           class="left-content col-md-12 col-lg-4 align-self-center text-center"
         >
           <h2>Playful</h2>
-          <p>Selfies thundercats coloring book kale chips cray hot chicken</p>
+          <p>
+            Balloons, balls, and bananas can all hurt. And they certainly aren't
+            as fun as dinos.
+          </p>
         </div>
         <div
           class="center-content col-md-12 col-lg-4 align-self-center text-center"
         >
           <h2>Beloved</h2>
-          <p>Selfies thundercats coloring book kale chips cray hot chicken</p>
+          <p>You cannot find a more loving pet this side of the Mississippi.</p>
         </div>
         <div
           class="right-content col-md-12 col-lg-4 align-self-center text-center"
         >
           <h2>Loyal</h2>
-          <p>Selfies thundercats coloring book kale chips cray hot chicken</p>
+          <p>
+            More devoted than a dog. And don't even get us started on how they
+            compare to cats!
+          </p>
         </div>
       </div>
     </div>
@@ -179,7 +185,7 @@
             <h5 class="card-subtitle mb-2 text-muted">A Whole Lotta Love</h5>
             <p class="card-text">
               Some dinos just need someone to love them. Whether you're looking
-              for a dino to curl up on your lap (or who's lap you can curl up
+              for a dino to curl up on your lap (or whose lap you can curl up
               into), this is your dino!
             </p>
           </div>
@@ -225,7 +231,7 @@
       </form>
     </section>
 
-    <!-- Accordian -->
+    <!-- FAQs -->
     <div class="accordion container-fluid" id="faqs">
       <h2>FAQs</h2>
       <div class="card">
@@ -239,7 +245,7 @@
               aria-expanded="true"
               aria-controls="collapseOne"
             >
-              Collapsible Group Item #1
+              Are you actually selling dinosaurs?
             </button>
           </h5>
         </div>
@@ -251,16 +257,9 @@
           data-parent="#faqs"
         >
           <div class="card-body">
-            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus
-            terry richardson ad squid. 3 wolf moon officia aute, non cupidatat
-            skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod.
-            Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid
-            single-origin coffee nulla assumenda shoreditch et. Nihil anim
-            keffiyeh helvetica, craft beer labore wes anderson cred nesciunt
-            sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings
-            occaecat craft beer farm-to-table, raw denim aesthetic synth
-            nesciunt you probably haven't heard of them accusamus labore
-            sustainable VHS.
+            You caught me. I'm not actually selling dinosaurs. This is a sample
+            site for educational purposes. But if I were selling dinosaurs,
+            would you be interested?
           </div>
         </div>
       </div>
@@ -275,7 +274,8 @@
               aria-expanded="false"
               aria-controls="collapseTwo"
             >
-              Collapsible Group Item #2
+              So then you're trying to capture my email and sell it to Russia,
+              right?
             </button>
           </h5>
         </div>
@@ -286,16 +286,10 @@
           data-parent="#faqs"
         >
           <div class="card-body">
-            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus
-            terry richardson ad squid. 3 wolf moon officia aute, non cupidatat
-            skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod.
-            Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid
-            single-origin coffee nulla assumenda shoreditch et. Nihil anim
-            keffiyeh helvetica, craft beer labore wes anderson cred nesciunt
-            sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings
-            occaecat craft beer farm-to-table, raw denim aesthetic synth
-            nesciunt you probably haven't heard of them accusamus labore
-            sustainable VHS.
+            As appealing as it might be to make millions of dollars and retire
+            in Fiji by selling email addresses to Russian hackers, I am neither
+            capturing nor selling email addresses. In fact, the email form on
+            this site is not functional.
           </div>
         </div>
       </div>
@@ -310,7 +304,7 @@
               aria-expanded="false"
               aria-controls="collapseThree"
             >
-              Collapsible Group Item #3
+              You seem to have an inside scoop. Are dinosaurs real?
             </button>
           </h5>
         </div>
@@ -321,16 +315,8 @@
           data-parent="#faqs"
         >
           <div class="card-body">
-            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus
-            terry richardson ad squid. 3 wolf moon officia aute, non cupidatat
-            skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod.
-            Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid
-            single-origin coffee nulla assumenda shoreditch et. Nihil anim
-            keffiyeh helvetica, craft beer labore wes anderson cred nesciunt
-            sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings
-            occaecat craft beer farm-to-table, raw denim aesthetic synth
-            nesciunt you probably haven't heard of them accusamus labore
-            sustainable VHS.
+            Let me answer your question with a question... Have you ever seen an
+            alligator or a rhinoceros or chicken? Of course dinosaurs are real!
           </div>
         </div>
       </div>
@@ -340,23 +326,27 @@
     <div id="about">
       <h2>About</h2>
       <p>
-        Prow scuttle parrel provost Sail ho shrouds spirits boom mizzenmast
-        yardarm. Pinnace holystone mizzenmast quarter crow's nest nipperkin grog
-        yardarm hempen halter furl. Swab barque interloper chantey doubloon
-        starboard grog black jack gangway rutters.
+        Dinos 4 Sale serves to find loving homes for dinosaurs of all shapes and
+        sizes. We started as a rescue home for dinosaurs. Dinos are abused and
+        abandoned an incredible amount of the time by their owners. After
+        fighting the red tape of charity, we found we can actually serve more
+        people and dinosaurs as a for profit business.
       </p>
       <p>
-        Deadlights jack lad schooner scallywag dance the hempen jig carouser
-        broadside cable strike colors. Bring a spring upon her cable holystone
-        blow the man down spanker Shiver me timbers to go on account lookout
-        wherry doubloon chase. Belay yo-ho-ho keelhaul squiffy black spot
-        yardarm spyglass sheet transom heave to.
+        Originally owners Jack and Dianne rescued their own dinosaurs - a
+        stegosaurus - 7 and a half years ago. They fell in love with Stella. She
+        quickly became, and remains, part of the family.
       </p>
       <p>
-        Trysail Sail ho Corsair red ensign hulk smartly boom jib rum gangway.
-        Case shot Shiver me timbers gangplank crack Jennys tea cup ballast
-        Blimey lee snow crow's nest rutters. Fluke jib scourge of the seven seas
-        boatswain schooner gaff booty Jack Tar transom spirits.
+        Today Jack and Dianne spend their days primarily matching potential
+        owners with amazing dinosaurs. However, they continue keeping their
+        hands in the business by overseeing all aspects - from daily dinos care
+        to connecting with customers to transporting their loving beasts around
+        the world.
+      </p>
+      <p>
+        Please contact us by the <a href="#contact">email form above</a> to get
+        started on your own dino journey!
       </p>
     </div>
 
@@ -374,7 +364,7 @@
         ></a>
       </div>
       <div class="footer-copyright">
-        © 2020 Copyright:
+        © 2021 Copyright:
         <a href="https://github.com/johndunstan/dinos-for-sale">
           Dinos4Sale.com</a
         >
