--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
         the world.
       </p>
       <p>
-        Please contact us by the <a href="#contact">email form above</a> to get
+        Please contact us via the <a href="#contact">email form above</a> to get
         started on your own dino journey!
       </p>
     </div>
