--- a/index.html
+++ b/index.html
@@ -6,12 +6,22 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <!-- build:css css/main.css -->
     <link
       rel="stylesheet"
       href="node_modules/bootstrap/dist/css/bootstrap.min.css"
     />
-
+    <link
+      rel="stylesheet"
+      href="node_modules/font-awesome/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="css/styles.css" />
+    <!-- endbuild -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500&family=Raleway&display=swap"
+      rel="stylesheet"
+    />
     <script
       src="https://kit.fontawesome.com/573dd0cca5.js"
       crossorigin="anonymous"
@@ -92,17 +102,13 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="images/dino1.jpg" alt="First slide" />
+          <img class="d-block w-100" src="img/dino1.jpg" alt="First slide" />
         </div>
         <div class="carousel-item">
-          <img
-            class="d-block w-100"
-            src="images/dino2.jpg"
-            alt="Second slide"
-          />
+          <img class="d-block w-100" src="img/dino2.jpg" alt="Second slide" />
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="images/dino3.jpg" alt="Third slide" />
+          <img class="d-block w-100" src="img/dino3.jpg" alt="Third slide" />
         </div>
       </div>
       <a
@@ -161,7 +167,7 @@
         <div class="card product-card">
           <img
             class="card-img-top"
-            src="images/products/ankylosaurus.jpg"
+            src="img/ankylosaurus.jpg"
             alt="Card image cap"
           />
           <div class="card-body">
@@ -177,7 +183,7 @@
         <div class="card product-card">
           <img
             class="card-img-top"
-            src="images/products/Brachiosaurus.jpg"
+            src="img/Brachiosaurus.jpg"
             alt="Card image cap"
           />
           <div class="card-body">
@@ -193,7 +199,7 @@
         <div class="card product-card">
           <img
             class="card-img-top"
-            src="images/products/triceratops.jpg"
+            src="img/triceratops.jpg"
             alt="Card image cap"
           />
           <div class="card-body">
@@ -372,8 +378,10 @@
     </footer>
 
     <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
+    <!-- build:js js/main.js -->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!-- endbuild -->
   </body>
 </html>
