Clean up color variable names in scss. Fix typos in content.

--- a/index.html
+++ b/index.html
@@ -339,14 +339,14 @@
         people and dinosaurs as a for profit business.
       </p>
       <p>
-        Originally owners Jack and Dianne rescued their own dinosaurs - a
+        Originally owners Jack and Dianne rescued their own dinosaur - a
         stegosaurus - 7 and a half years ago. They fell in love with Stella. She
         quickly became, and remains, part of the family.
       </p>
       <p>
         Today Jack and Dianne spend their days primarily matching potential
         owners with amazing dinosaurs. However, they continue keeping their
-        hands in the business by overseeing all aspects - from daily dinos care
+        hands in the business by overseeing all aspects - from daily dino care
         to connecting with customers to transporting their loving beasts around
         the world.
       </p>
