--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 
     <!-- Contact -->
     <section id="contact">
-      <form>
+      <form class="needs-validation" novalidate>
         <h3>Start your dino journey.</h3>
         <div class="form-group">
           <label for="exampleInputEmail1">Email address</label>
@@ -227,7 +227,12 @@
             id="exampleInputEmail1"
             aria-describedby="emailHelp"
             placeholder="dinos@example.com"
+            required
           />
+          <div class="valid-feedback">Looks good!</div>
+          <div class="invalid-feedback">
+            Please enter a valid email address.
+          </div>
           <small id="emailHelp" class="form-text text-muted"
             >We'll never share your email with anyone else.</small
           >
@@ -383,5 +388,37 @@
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- endbuild -->
+
+    <script>
+      // Example starter JavaScript for disabling form submissions if there are invalid fields
+      ;(function () {
+        'use strict'
+        window.addEventListener(
+          'load',
+          function () {
+            // Fetch all the forms we want to apply custom Bootstrap validation styles to
+            var forms = document.getElementsByClassName('needs-validation')
+            // Loop over them and prevent submission
+            var validation = Array.prototype.filter.call(
+              forms,
+              function (form) {
+                form.addEventListener(
+                  'submit',
+                  function (event) {
+                    if (form.checkValidity() === false) {
+                      event.preventDefault()
+                      event.stopPropagation()
+                    }
+                    form.classList.add('was-validated')
+                  },
+                  false
+                )
+              }
+            )
+          },
+          false
+        )
+      })()
+    </script>
   </body>
 </html>
